; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_input.c_queue_add_tail.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_input.c_queue_add_tail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cmd_queue = type { %struct.mp_cmd* }
%struct.mp_cmd = type { %struct.mp_cmd* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cmd_queue*, %struct.mp_cmd*)* @queue_add_tail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @queue_add_tail(%struct.cmd_queue* %0, %struct.mp_cmd* %1) #0 {
  %3 = alloca %struct.cmd_queue*, align 8
  %4 = alloca %struct.mp_cmd*, align 8
  %5 = alloca %struct.mp_cmd**, align 8
  store %struct.cmd_queue* %0, %struct.cmd_queue** %3, align 8
  store %struct.mp_cmd* %1, %struct.mp_cmd** %4, align 8
  %6 = load %struct.cmd_queue*, %struct.cmd_queue** %3, align 8
  %7 = getelementptr inbounds %struct.cmd_queue, %struct.cmd_queue* %6, i32 0, i32 0
  store %struct.mp_cmd** %7, %struct.mp_cmd*** %5, align 8
  br label %8

8:                                                ; preds = %12, %2
  %9 = load %struct.mp_cmd**, %struct.mp_cmd*** %5, align 8
  %10 = load %struct.mp_cmd*, %struct.mp_cmd** %9, align 8
  %11 = icmp ne %struct.mp_cmd* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load %struct.mp_cmd**, %struct.mp_cmd*** %5, align 8
  %14 = load %struct.mp_cmd*, %struct.mp_cmd** %13, align 8
  %15 = getelementptr inbounds %struct.mp_cmd, %struct.mp_cmd* %14, i32 0, i32 0
  store %struct.mp_cmd** %15, %struct.mp_cmd*** %5, align 8
  br label %8

16:                                               ; preds = %8
  %17 = load %struct.mp_cmd*, %struct.mp_cmd** %4, align 8
  %18 = load %struct.mp_cmd**, %struct.mp_cmd*** %5, align 8
  store %struct.mp_cmd* %17, %struct.mp_cmd** %18, align 8
  %19 = load %struct.mp_cmd*, %struct.mp_cmd** %4, align 8
  %20 = getelementptr inbounds %struct.mp_cmd, %struct.mp_cmd* %19, i32 0, i32 0
  store %struct.mp_cmd* null, %struct.mp_cmd** %20, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
